--- a/style/Css.css
+++ b/style/Css.css
@@ -1,3 +1,9 @@
-h3{
-    color: brown;
+div{
+    background-color: rgba(137, 43, 226, 0.342);
+    width: 80%;
+    /* margin-left: 20%; */
+    text-align: center;
+    margin: auto;
+    padding: 5px;
+    border-radius: 10px;
 }
